--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
 
 body {
     background-image: url("./img/flower-bg.jpg");
-    background-size: contain;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -20,6 +20,9 @@ nav {
     background-color: rgba(248, 249, 250, 0) !important;
 }
 
+.row {
+  align-items: center;
+}
 
 /* On main page, section 1 garden image */
 
@@ -29,12 +32,12 @@ nav {
 }
 
 #garden-img-vert {
-    margin-top: 10%;
-    max-width: 100%;
+    height:100%;
 }
 
 #intro {
     padding: 5%;
+    align-items: center;
     background-color: #9cdaf8;
     background-image: linear-gradient(315deg, #9cdaf8 0%, #98fcbd 74%);
 }
@@ -47,7 +50,7 @@ nav {
 
 p {
     text-indent: 50px;
-    line-height: 2.0;
+    line-height: 1.7;
 }
 
 .frosted {
