--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,7 @@ nav {
 
 .row {
   align-items: center;
+  justify-content: center;
 }
 
 /* On main page, section 1 garden image */
@@ -64,17 +65,37 @@ p {
 }
 
 #banner {
-    display:table;
-    height:7rem;
-    color:teal;
+    display:flex;
+    height:20rem;
+    color:#98fcbd;
     letter-spacing: 3px;
     margin:auto;
-    vertical-align: middle;
+    justify-content: flex-start;
 }
 
+#banner > h1 {
+    -webkit-text-stroke: 1px teal;
+    text-shadow: 2px 2px #000;
+    margin-left: 15%;
+}
+
+#small-banner {
+    color:#98fcbd;
+    -webkit-text-stroke: 1px teal;
+    text-shadow: 2px 2px #000;
+}
 
 
 .footer {
     background-color: rgba(248, 249, 250, .8);
     padding:1rem;
+}
+
+#contact-list {
+    list-style-type: none;
+}
+
+#icon {
+    max-width: 100px;
+    padding:10px;
 }
