--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
 
 body {
     background-image: url("./img/flower-bg.jpg");
-    background-size: cover;
+    background-size: contain;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -17,6 +17,7 @@ nav {
 }
 
 .jumbotron {
+    height: 30rem;
     background-color: rgba(248, 249, 250, 0) !important;
 }
 
@@ -64,19 +65,20 @@ p {
     width:100%;
 }
 
-#banner {
+.banner {
     display:flex;
-    height:20rem;
+    height:30rem;
     color:#98fcbd;
     letter-spacing: 3px;
     margin:auto;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
 }
 
-#banner > h1 {
+.lg-banner-txt  {
     -webkit-text-stroke: 1px teal;
     text-shadow: 2px 2px #000;
     margin-left: 15%;
+    margin-top:-18%;
 }
 
 #small-banner {
@@ -98,4 +100,21 @@ p {
 #icon {
     max-width: 100px;
     padding:10px;
+}
+
+#label {
+    margin-left:-10%;
+}
+
+#cart {
+    max-width: 35px;
+}
+
+#venmo {
+    font-size:1.3rem;
+    font-weight: bold;
+}
+
+.btn-lg{
+    margin-right:25px;
 }
